--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zorgit-design",
+  "_comment1": "fix name above, add ur website link below",
   "homepage": "https://rafiaksd.github.io/zorgit-design/",
   "version": "0.0.0",
   "type": "module",
@@ -8,8 +9,10 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "_comment2": "npm install gh-pages -> (below) predeploy & deploy",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "_comment3": "in vite.config.js add -> base: '/zorgit-design'"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
